--- a/translations/ro.json
+++ b/translations/ro.json
@@ -378,5 +378,7 @@
     "plCarGOboxRechargeBtn": "Reîncarcă contul",
     "plCargobox": "carGObox Polonia",
     "noRoadtaxInfo": "Nu există informații despre taxa de drum.",
-    "etransportDeclarationCanceled":  "Declarația a fost anulată"
+    "etransportDeclarationCanceled":  "Declarația a fost anulată",
+    "confirmCancel": "Confirmă anularea",
+    "confirmCancelMessage": "Sunteți sigur că doriți să anulați?"
 }
