Update branch timer value and add confirmation action translations for multiple languages

--- a/translations/de.json
+++ b/translations/de.json
@@ -380,5 +380,6 @@
     "noRoadtaxInfo": "Keine Informationen zur Straßenbenutzungsgebühr verfügbar.",
     "etransportDeclarationCanceled": "Die Erklärung wurde abgebrochen.",
     "confirmCancel": "Abbrechen bestätigen",
-    "confirmCancelMessage": "Sind Sie sicher, dass Sie abbrechen möchten?"
+    "confirmCancelMessage": "Sind Sie sicher, dass Sie abbrechen möchten?",
+    "confirmAction": "Bestätigen"
 }
