--- a/translations/ro.json
+++ b/translations/ro.json
@@ -381,5 +381,6 @@
     "etransportDeclarationCanceled":  "Declarația a fost anulată",
     "confirmCancel": "Confirmă anularea",
     "confirmCancelMessage": "Sunteți sigur că doriți să anulați?",
-    "confirmAction": "Confirmă acțiunea"
+    "confirmAction": "Confirmă acțiunea",
+    "confirmActionMessageMakeUITDelivered": "Sunteți sigur că doriți să marcați ca fiind livrat?"
 }
