--- a/translations/ro.json
+++ b/translations/ro.json
@@ -382,5 +382,6 @@
     "confirmCancel": "Confirmă anularea",
     "confirmCancelMessage": "Sunteți sigur că doriți să anulați?",
     "confirmAction": "Confirmă acțiunea",
-    "confirmActionMessageMakeUITDelivered": "Sunteți sigur că doriți să marcați ca fiind livrat?"
+    "confirmActionMessageMakeUITDelivered": "Sunteți sigur că doriți să marcați ca fiind livrat?",
+    "delivered": "Livrat"
 }
