--- a/translations/de.json
+++ b/translations/de.json
@@ -382,5 +382,6 @@
     "confirmCancel": "Abbrechen bestätigen",
     "confirmCancelMessage": "Sind Sie sicher, dass Sie abbrechen möchten?",
     "confirmAction": "Bestätigen",
-    "confirmActionMessageMakeUITDelivered": "Sind Sie sicher, dass Sie die Uit-Lieferung bestätigen möchten?"
+    "confirmActionMessageMakeUITDelivered": "Sind Sie sicher, dass Sie die Uit-Lieferung bestätigen möchten?",
+    "delivered": "Geliefert"
 }
