Add 'delivered' translation to Russian language

--- a/translations/ru.json
+++ b/translations/ru.json
@@ -382,5 +382,6 @@
     "confirmCancel": "Подтвердите отмену",
     "confirmCancelMessage": "Вы уверены, что хотите отменить?",
     "confirmAction": "Подтвердить действие",
-    "confirmActionMessageMakeUITDelivered": "Вы уверены, что хотите отправить UIT в статусе «Доставлен»?"
+    "confirmActionMessageMakeUITDelivered": "Вы уверены, что хотите отправить UIT в статусе «Доставлен»?",
+    "delivered": "Доставлен"
 }
