Update branch timer and add 'mark as delivered' translations for multiple languages

--- a/translations/de.json
+++ b/translations/de.json
@@ -383,5 +383,6 @@
     "confirmCancelMessage": "Sind Sie sicher, dass Sie abbrechen möchten?",
     "confirmAction": "Bestätigen",
     "confirmActionMessageMakeUITDelivered": "Sind Sie sicher, dass Sie die Uit-Lieferung bestätigen möchten?",
-    "delivered": "Geliefert"
+    "delivered": "Geliefert",
+    "etransportUitMarkDelivered": "Lieferung bestätigen"
 }
