--- a/translations/hu.json
+++ b/translations/hu.json
@@ -383,5 +383,6 @@
     "confirmCancelMessage": "Biztosan törölni szeretné?",
     "confirmAction": "Megerősítés",
     "confirmActionMessageMakeUITDelivered": "Biztosan törölni szeretné?",
-    "delivered": "Törölve"
+    "delivered": "Törölve",
+    "etransportUitMarkDelivered": "Törölve"
 }
