Add 'UIT was marked as delivered' translations for English, Hungarian, Romanian, and Russian

--- a/translations/en.json
+++ b/translations/en.json
@@ -383,5 +383,6 @@
     "confirmAction": "Confirm action",
     "confirmActionMessageMakeUITDelivered": "Are you sure you want to mark the UIT as delivered?",
     "delivered": "Delivered",
-    "etransportUitMarkDelivered": "Mark as delivered"
+    "etransportUitMarkDelivered": "Mark as delivered",
+    "etransportUitDelivered": "UIT was marked as delivered"
 }
