Add 'UIT was delivered at' translations for German, English, Hungarian, Romanian, and Russian

--- a/translations/de.json
+++ b/translations/de.json
@@ -384,5 +384,6 @@
     "confirmAction": "Bestätigen",
     "confirmActionMessageMakeUITDelivered": "Sind Sie sicher, dass Sie die Uit-Lieferung bestätigen möchten?",
     "delivered": "Geliefert",
-    "etransportUitMarkDelivered": "Lieferung bestätigen"
+    "etransportUitMarkDelivered": "Lieferung bestätigen",
+    "uitWasDeliveredAt": "Uit wurde am:"
 }
