--- a/translations/en.json
+++ b/translations/en.json
@@ -385,5 +385,7 @@
     "delivered": "Delivered",
     "etransportUitMarkDelivered": "Mark as delivered",
     "etransportUitDelivered": "UIT was marked as delivered",
-    "uitWasDeliveredAt": "UIT was marked as delivered at:"
+    "uitWasDeliveredAt": "UIT was marked as delivered at:",
+    "notificationTestSuccess": "Notification test sent successfully!",
+    "notificationTestError": "Notification test failed!"
 }
