--- a/translations/ru.json
+++ b/translations/ru.json
@@ -386,5 +386,7 @@
     "delivered": "Доставлен",
     "etransportUitMarkDelivered": "Отметить как доставленный",
     "etransportUitDelivered": "UIT доставлен",
-    "uitWasDeliveredAt" : "UIT был доставлен в:"
+    "uitWasDeliveredAt" : "UIT был доставлен в:",
+    "notificationTestSuccess": "Тестовое уведомление отправлено",
+    "notificationTestError": "Тестовое уведомление не отправлено"
 }
