Update branch timer and refine Romanian translations for schedule statuses

--- a/translations/ro.json
+++ b/translations/ro.json
@@ -359,9 +359,9 @@
     "etransportStatusPending": "În așteptare",
     "etransportUitCreateDeclaration": "Creare declarație",
     "scheduleStatusPlanned": "Planificat",
-    "scheduleStatusCompleted": "Finalizat",
+    "scheduleStatusCompleted": "Date trimise",
     "scheduleStatusCanceled": "Anulat",
-    "scheduleStatusOngoing": "În derulare",
+    "scheduleStatusOngoing": "În desfășurare",
     "createUitDeviceDeclaration": "Creare declarație",
     "etransportUitDeviceDeclarationDateFrom": "Data început",
     "createuitCode": "Creare declarație ANAF",
