--- a/translations/en.json
+++ b/translations/en.json
@@ -387,5 +387,6 @@
     "etransportUitDelivered": "UIT was marked as delivered",
     "uitWasDeliveredAt": "UIT was marked as delivered at:",
     "notificationTestSuccess": "Notification test sent successfully!",
-    "notificationTestError": "Notification test failed!"
+    "notificationTestError": "Notification test failed!",
+    "etransportUitDeletedMessage": "UIT was deleted successfully!"
 }
