--- a/translations/ro.json
+++ b/translations/ro.json
@@ -389,5 +389,6 @@
     "uitWasDeliveredAt": "UIT a fost marcat ca fiind livrat la:",
     "notificationTestSuccess": "Notificarea a fost trimisă cu succes!",
     "notificationTestError": "Eroare la trimiterea notificării!",
-    "etransportUitDeletedMessage": "UIT a fost șters cu succes!"
+    "etransportUitDeletedMessage": "UIT a fost șters cu succes!",
+    "delete": "Șterge"
 }
