--- a/translations/de.json
+++ b/translations/de.json
@@ -82,7 +82,7 @@
     "etransportScheduleTransmissionStoped": "",
     "etransportScheduleTransmissionCanceled": "",
     "etransportScheduleExisting": "",
-    "etransportSearchUITCode": "",
+    "etransportSearchUITCode": "UIT-Code oder Fahrzeug suchen",
     "etransportEmptyUITList": "",
     "etransportAddCodeManually": "",
     "etransportChangeVehicle": "",
@@ -389,5 +389,7 @@
     "notificationTestSuccess": "Die Benachrichtigung wurde erfolgreich gesendet.",
     "notificationTestError": "Es ist ein Fehler beim Senden der Benachrichtigung aufgetreten.",
     "etransportUitDeletedMessage": "Die Uit wurde erfolgreich gelöscht!",
-    "delete": "Löschen"
+    "delete": "Löschen",
+    "confirmManualSendToAnaf": "Es ist erforderlich, das Fahrzeug manuell im e-Transport-System (ANAF) zu ändern. Dieser Schritt erfolgt nicht automatisch und muss direkt von Ihnen in der ANAF-Plattform durchgeführt werden.",
+    "confirmManualSendToAnafTitle": "Achtung!"
 }
