--- a/translations/hu.json
+++ b/translations/hu.json
@@ -392,5 +392,6 @@
     "etransportUitDeletedMessage": "Sikeresen törölve!",
     "delete": "Törlés",
     "confirmManualSendToAnaf": "Szükséges kézzel módosítani a járművet az e-Transport (ANAF) rendszerben. Ez a lépés nem történik meg automatikusan, és Önnek kell elvégeznie az ANAF platformján.",
-    "confirmManualSendToAnafTitle": "Figyelem!"
+    "confirmManualSendToAnafTitle": "Figyelem!",
+    "modalWillClosedAuto": "Az ablak automatikusan bezáródik"
 }
