--- a/translations/de.json
+++ b/translations/de.json
@@ -391,5 +391,6 @@
     "etransportUitDeletedMessage": "Die Uit wurde erfolgreich gelöscht!",
     "delete": "Löschen",
     "confirmManualSendToAnaf": "Es ist erforderlich, das Fahrzeug manuell im e-Transport-System (ANAF) zu ändern. Dieser Schritt erfolgt nicht automatisch und muss direkt von Ihnen in der ANAF-Plattform durchgeführt werden.",
-    "confirmManualSendToAnafTitle": "Achtung!"
+    "confirmManualSendToAnafTitle": "Achtung!",
+    "modalWillClosedAuto": "Das Modal wird automatisch geschlossen"
 }
