--- a/translations/en.json
+++ b/translations/en.json
@@ -392,5 +392,6 @@
     "delete": "Delete",
     "confirmManualSendToAnaf": "You must manually modify the vehicle in the e-Transport (ANAF) platform. This step is not performed automatically and must be completed by you directly in the ANAF system.",
     "confirmManualSendToAnafTitle": "Attention!",
-    "modalWillClosedAuto": "The modal will be closed automatically"
+    "modalWillClosedAuto": "The modal will be closed automatically",
+    "confirmActionMessageDeleteUit": "Are you sure you want to delete the UIT?"
 }
