--- a/translations/ru.json
+++ b/translations/ru.json
@@ -394,5 +394,7 @@
     "confirmManualSendToAnaf": "Необходимо вручную изменить транспортное средство в системе e-Transport (ANAF). Этот шаг не выполняется автоматически и должен быть выполнен вами напрямую на платформе ANAF.",
     "confirmManualSendToAnafTitle": "Внимание!",
     "modalWillClosedAuto": "Окно закроется автоматически",
-    "confirmActionMessageDeleteUit": "Вы уверены, что хотите удалить UIT?"
+    "confirmActionMessageDeleteUit": "Вы уверены, что хотите удалить UIT?",
+    "vehicleDeviceNoDataTransmission": "Устройство транспортного средства не имеет обновленной передачи данных на сервер CargoTrack. Поэтому местоположение транспортного средства может быть недоступно в данный момент для начала передачи данных.",
+    "acknowledgeRiskNoDataUpdate": "Я осознаю риск сохранения без обновленной передачи данных."
 }
